--- a/Atividade_mobille/package.json
+++ b/Atividade_mobille/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "axios": "^1.8.4",
     "expo": "~52.0.42",
     "expo-status-bar": "~2.0.1",
+    "json-server": "^1.0.0-beta.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.8",
@@ -21,8 +24,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "@expo/vector-icons": "^14.0.2"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
