--- a/Atividade_mobille/package.json
+++ b/Atividade_mobille/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.4",
     "expo": "~52.0.42",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.7.1",
     "json-server": "^1.0.0-beta.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
